added testing library and printing with print

--- a/PageRank/stage2/task-info.yaml
+++ b/PageRank/stage2/task-info.yaml
@@ -2,5 +2,17 @@ type: edu
 files:
 - name: pagerank/stage2.py
   visible: true
-- name: tests/test_task.py
-  visible: false
+- name: hstest/test_case.py
+  visible: true
+- name: hstest/exceptions.py
+  visible: true
+- name: hstest/stage_test.py
+  visible: true
+- name: hstest/django_test.py
+  visible: true
+- name: hstest/test_helper.py
+  visible: true
+- name: hstest/check_result.py
+  visible: true
+- name: hstest/__init__.py
+  visible: true
